# A2AChannel

./: .gitignore  CONTEXT.md  README.md  package.json  tsconfig.json
docs/: PROTOCOL.md  README.md  explorations.md
docs/adr/: 0001-lazy-room-hydration.md
hub/: channel.ts  chat.ts  hub.ts  main.ts  nutshell.ts  sdk-agents.ts  sessions.ts  usage.ts
hub/channel/: call-tool.ts  hub-client.ts  instructions.json  instructions.ts  permission-relay.ts  tail.ts  tools.ts
hub/core/: agents.ts  attachments.ts  auth.ts  dispatcher.ts  events.ts  ids.ts  ledger.ts  permission-snapshots.ts  redaction.ts  room-hydrator.ts  sse.ts  transcript.ts  types.ts
hub/kinds/: handoff.ts  interrupt.ts  permission.ts
scripts/: bootstrap-tap.sh  build-sidecars.sh  build-tmux.sh  install.sh  release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pty.rs
tests/contract/: has-required-hooks.test.ts
tests/helpers/: fetch.ts  hub.ts  smoke.test.ts  tmux.ts
tests/integration/: auth-contract.test.ts  handoff-lifecycle.test.ts  interrupt-lifecycle.test.ts  migration-forward.test.ts  permission-lifecycle.test.ts  persist-and-restart.test.ts  pty-plumbing.test.ts  sse-broadcast.test.ts  sse-scope.test.ts
tests/unit/: permission-snapshots.test.ts  slash-parse.test.ts  transcript.test.ts
ui/: index.html  main.js  style.css  terminal.js
ui/core/: http.js  state.js  text.js
ui/features/: attachments.js  composer.js  emoji.js  mcp-modal.js  mentions.js  messages.js  nutshell.js  rooms.js  (+11 more)
(+126 files in other folders)
