[package]
name = "a2achannel"
version = "0.2.0"
edition = "2021"

[lib]
name = "a2achannel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["rt", "macros", "sync", "io-util", "fs"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
