[package]
name = "a2achannel"
version = "0.9.6"
edition = "2021"

[lib]
name = "a2achannel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# devtools feature exposes "Inspect Element" in the webview + keyboard shortcut
# Cmd+Opt+I. Shipped in release builds as well so end-user bug reports can
# include console logs without requiring a dev build.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "fs"] }
portable-pty = "0.8"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
